--- a/edmSite/app/views/layouts/application.html.erb
+++ b/edmSite/app/views/layouts/application.html.erb
@@ -1,14 +1,31 @@
-<!DOCTYPE html>
-<html>
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>EdmSite</title>
+  <title>
+  	<% if @title then %>
+  		<%= @title %>
+  	<% else %>
+  		Project5
+  	<% end %>
+  </title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+	<div class="header"></div>
+	<h1>Tianyu is the gay boy!!!!</h1>
+	<hr/>
+	<div class="headerSpace"></div>
+	<% if session[:user] != nil %>
+		<div> Hi <%= User.find(session[:user]).first_name%>! <a href="/users/logout">logout</a> </div>
+	<%else%>
+		<div><a href="/users/login">login</a></div>
+	<%end%>
+	<div><%=flash[:notice]%></div>
+	<%= yield %>
 </body>
+
 </html>
