added festivals, photos, artists and the twitter bootstrap

--- a/edmSite/app/views/layouts/application.html.erb
+++ b/edmSite/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   	<% if @title then %>
   		<%= @title %>
   	<% else %>
-  		Project5
+  		EDM Site
   	<% end %>
   </title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
@@ -16,7 +16,7 @@
 </head>
 <body>
 	<div class="header"></div>
-	<h1>Tianyu is the gay boy!!!!</h1>
+	<h1>YAY EDM!!!!</h1>
 	<hr/>
 	<div class="headerSpace"></div>
 	<% if session[:user] != nil %>
