added a bunch of shit

--- a/edmSite/app/views/layouts/application.html.erb
+++ b/edmSite/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
     <ul class="nav">
       <li class="active"><a href="http://localhost:3000/homepage/home/">Home</a></li>
       <li><a href="http://localhost:3000/festivals/home/">Festivals</a></li>
-       <li><a href="photos/home">Photos</a></li>
+       <li><a href="http://localhost:3000/pics/home/">Photos</a></li>
         <li><a href="music/home">Music</a></li>
     </ul>
   </div>
