--- a/edmSite/app/views/festivals/home.html.erb
+++ b/edmSite/app/views/festivals/home.html.erb
@@ -1,5 +1,6 @@
 <div class = "offset1">
 
+
 <%= form_for(@newFestival, :html=>{:multipart => true}, :url => {:action => :createFestival}) do |form| %>
 	<%= label_tag(:festival_name, "Festival name: ") %><%= form.text_field :festival_name%>
 	<br><%= label_tag(:start_date, "Date:") %>
@@ -22,11 +23,11 @@
 				<img class = "pic" src="/images/<%= festival.photo.file_name %>" alt="<%= festival.photo.file_name%>"/>
 			<% else %>
 				<img class = "pic" src="/images/default.jpg" alt="default"/>
-
 			<% end %>
 			<div><%=festival.festival_name%></div>
 			<div><%=festival.start_date%></div>
 			<div><%=festival.location%></div>
+			<a href="festivals/attendedFestival">Attended</a>
 		</div>
 	</li>
 <%end%>
